services/inventory-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: order-platform
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8083
      targetPort: 8083
